able to dynamically show products 'filtered' by platform

--- a/webshop/src/css/App.css
+++ b/webshop/src/css/App.css
@@ -10,6 +10,11 @@
   list-style: none;
 }
 
+.platform_buttons {
+display: flex;
+justify-content: space-evenly;
+}
+
 /* .App {
   text-align: center;
 }
